# clockwork-client

./: .gitignore  .release-it.json  .vercelignore  BUILD.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/workflows/: release.yml
.trae/documents/: plan_20260211_022522.md  plan_20260211_042734.md  plan_20260211_093129.md  plan_20260212_031339.md  plan_20260212_065411.md  plan_20260212_083539.md
apps/api/: .env.example  mcp.inspector.sample.json  mcp.sample.json  package.json  tsconfig.json  vercel.json
apps/inngest/: .env.example  eslint.config.js  package.json  tsconfig.json  vercel.json
apps/tauri/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md  typescript.md
docs/: deployment.md
docs/plans/: 2026-02-11-accountid-primary-key-design.md  2026-02-24-risk-analysis-and-mitigations.md  2026-02-24-unified-worklog-process-design.md  2026-02-24-unlogged-days-warning-design.md  2026-02-25-clickable-issue-keys-design.md  2026-02-25-windows-platform-support-design.md  2026-02-25-windows-tray-enhancement-design.md  2026-03-01-warning-merge-design.md  (+19 more)
scripts/: release-macos.sh
(+152 files in other folders)
