[package]
name = "clockwork-menubar"
version = "0.0.0"
description = "Clockwork Menubar - A cross-platform menu bar app for Clockwork Pro"
authors = []
edition = "2021"

[lib]
name = "clockwork_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
